# openal-soft

./: .gitignore  meson.build  version.py
alc/: alc.cpp
